# Monte-Python

./: .gitignore  04_23_old.py  AESOP_0423.py  AESOP_0423_script.c  AESOP_0423_script.h  Monte Carlo AESOP-Lite.ipynb  PHA channel 4.asc  PHA channel 4.net  PHA channel 4.op.raw  PHA channel 4.raw  PHA.asc  PHA.eff  PHA.net  PHA.op.raw  PHA.raw  PHAReduced.asc  PHAReduced.net  PHAReduced_sim.net  PHA_current.asc  README.md  analysis_multiprocess.ipynb  another_plotfile.py  dev_script.py  development_notebook.ipynb  monte_carlo_4_2_2023.py  monte_carlo_April_2023.c  monte_carlo_April_2023.cpp  monte_carlo_April_2023.py  monte_carlo_extradata30chT4_06_11_2023.txt  monte_carlo_output.txt  monte_carlo_output_channel1.txt  monte_carlo_output_channel4.txt  multiprocess_AESOP_0423.py  multiprocess_AESOP_0723.py  multiprocess_AESOP_1023.py  report_time.prof  result_16728_of_20000_06_05_2023.txt  result_1_of_1_06_05_2023.txt  result_277_of_289_05_17_2023.txt  result_3867_of_8000_05_17_2023.txt  (+4 more)
analysis/: .gitignore  pyproject.toml
poetryEnv/: README.md  pyproject.toml
poetryEnv/AESOP_Testing/: AESOP_OG.py
poetryEnv/Assign_Interpreter/: jupytertest.ipynb
poetryEnv/Plots_11_16_23/: mcmurdo_analysis.ipynb
poetryEnv/ToFpy/: monte_carlo_extradata1chT1_11_14_2023.txt  monte_carlo_extradata1chT4_11_14_2023.txt  monte_carlo_input1ch1_11_14_2023.txt  monte_carlo_input1ch4_11_14_2023.txt  multiprocess_AESOP_1023.py  t1_data.hdf5  t4_data.hdf5  temp.hdf5
poetryEnv/poetryenv/: AESOP_0423_B4Majorchanges.py  AESOP_0423v2.py  Does_not_work.py  Lt4part.ipynb  Lt50.ipynb  Lt5part.ipynb  (+11 more)
(+107 files in other folders)
