[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
notebook = "^6.5.4"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
pandas = "^2.0.0"
astropy = "^5.2.2"
tqdm = "^4.65.0"
memory-profiler = "^0.61.0"
progressbar2 = "^4.2.0"
snakeviz = "^2.2.0"
tuna = "^0.5.11"
psutil = "^5.9.5"
ipympl = "^0.9.3"
ipywidgets = "^8.1.1"
# ipywidgets = "7.7.2"
# pyqt5 = "=5.15.10"
h5py = "^3.10.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
