[tool.poetry]
name = "poetryenv"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
notebook = "^6.5.4"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
